infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    na: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.carsbid.store
    - api.carsbid.store
    - id.carsbid.store
    secretName: carsbid-tls
  rules:
  - host: app.carsbid.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-clusterip
            port: 
              number: 3000
  - host: api.carsbid.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
  - host: id.carsbid.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: identity-clusterip
            port: 
              number: 80
